style: update current

--- a/index.html
+++ b/index.html
@@ -54,17 +54,17 @@
             <p>Currently, I am:</p>
 
             <p><strong>Reading</strong>: <a class="primary-link" target="_blank"
-                    href="https://www.goodreads.com/book/show/298275.Nausea">Nausea</a> by Jean-Paul Sartre</p>
+                    href="https://webhomes.maths.ed.ac.uk/~v1ranick/papers/poincare2009.pdf">Papers on Topology</a> by Henri Poincaré</p>
 
             <p><strong>Listening to</strong>: <a class="primary-link" target="_blank"
-                    href="https://open.spotify.com/album/3rtHKkpPLmiwHNiHA0Kr3d?si=PIKRU9-3RH6k59M0EE5GDw">FLYING BEAGLE</a> by
-                Himiko Kikuchi, <a class="primary-link" target="_blank"
-                    href="https://open.spotify.com/album/0Ydakb7npXmyTwFLvKc5qt?si=kcbPQd9nSmWgoqlZf0mk1Q">Ballads</a> by John Coltrane, <a class="primary-link" target="_blank"
+                    href="https://open.spotify.com/album/3ceC0MdCoH0juD1Tr3ByKh?si=ctk_LL20RJOapUue0feHiQ">Niwamori Waltz</a> by
+                Niwamori Piano, <a class="primary-link" target="_blank"
+                    href="https://open.spotify.com/album/6qm2n8crvmfCq6RNeXLjvx?si=zpNcLzuOQXeBw1vv9wYUiQ">Lookaftering</a> by Vashti Bunyan, <a class="primary-link" target="_blank"
                     href="https://open.spotify.com/album/4ntjTCmyhwHIsK12RScxRP?si=EqvEQl8GRomU_VonHaYbZg">Bossa Nova Soul Samba</a>
                 by Ike Quebec</p>
 
             <p><strong>Watching</strong>: <a class="primary-link" target="_blank"
-                    href="https://a24films.com/films/marty-supreme"> Marty Supreme</a> from
+                    href="https://a24films.com/films/marty-supreme">Marty Supreme</a> from
                 A24</p>
 
             <br>
@@ -74,11 +74,12 @@
                 <div class="secondary-text">
                     <br>
                     <!-- December 7th 2025 -->
-                    <p><strong>Reading</strong>: <a class="secondary-link" target="_blank"
+                     <p><strong>December 7th 2025</strong></p>
+                    <p>Reading: <a class="secondary-link" target="_blank"
                             href="https://www.math.unm.edu/~crisp/courses/math401/tao.pdf">Real Analysis</a> by Terence
                         Tao</p>
 
-                    <p><strong>Listening to</strong>: <a class="secondary-link" target="_blank"
+                    <p>Listening to: <a class="secondary-link" target="_blank"
                             href="https://open.spotify.com/album/2lPI6LkysvnK2wNPY993Un?si=fZOuLplxRgyidhOCBZydZg">Tokyo
                             Concert</a> by
                         Bill Evans, <a class="secondary-link" target="_blank"
@@ -88,9 +89,11 @@
                             Metal</a>
                         by Cameron Winter</p>
 
-                    <p><strong>Watching</strong>: <a class="secondary-link" target="_blank"
+                    <p>Watching: <a class="secondary-link" target="_blank"
                             href="https://youtu.be/p1FF3r6raSc?si=NYl1prJeunKT4j81"> The Hard-Won Wisdom of Yung
                             Lean</a> from NYT Popcast</p>
+
+                    <br>
 
                     <!-- July 12th 2025 -->
                     <p><strong>July 12th 2025</strong></p>
