--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <p><strong>Listening to</strong>: <a class="primary-link" target="_blank"
                     href="https://open.spotify.com/album/3ceC0MdCoH0juD1Tr3ByKh?si=ctk_LL20RJOapUue0feHiQ">Niwamori Waltz</a> by
                 Niwamori Piano, <a class="primary-link" target="_blank"
-                    href="https://open.spotify.com/album/6qm2n8crvmfCq6RNeXLjvx?si=zpNcLzuOQXeBw1vv9wYUiQ">Lookaftering</a> by Vashti Bunyan, <a class="primary-link" target="_blank"
+                    href="https://open.spotify.com/album/0I8vpSE1bSmysN2PhmHoQg?si=E8nQmO-bRRCERFQwyxnmtw">The Köln Concert</a> by Keith Jarrett, <a class="primary-link" target="_blank"
                     href="https://open.spotify.com/album/4ntjTCmyhwHIsK12RScxRP?si=EqvEQl8GRomU_VonHaYbZg">Bossa Nova Soul Samba</a>
                 by Ike Quebec</p>
 
@@ -70,7 +70,7 @@
             <br>
 
             <details>
-                <summary class="secondary-link">Last updated December 30th 2025</summary>
+                <summary class="secondary-link">Last updated January 10th 2025</summary>
                 <div class="secondary-text">
                     <br>
                     <!-- December 7th 2025 -->
