deprecate: no more album view

--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
         content="Homepage of Gregory Cotton, user experience designer, engineer, interdisciplinary artist from Ottawa, Ontario, living in Lisbon, Portugal.">
 
     <meta property="og:title" content="Gregory Cotton">
-    <meta property="og:description" content="Homepage of Gregory Cotton, user experience designer, engineer, interdisciplinary artist from Ottawa, Ontario, living in Lisbon, Portugal.">
+    <meta property="og:description"
+        content="Homepage of Gregory Cotton, user experience designer, engineer, interdisciplinary artist from Ottawa, Ontario, living in Lisbon, Portugal.">
     <meta property="og:type" content="website">
 
     <meta name="twitter:title" content="Gregory Cotton">
-    
+
     <meta name="author" content="Gregory Cotton">
     <meta name="creator" content="gregorycotton.ca">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -54,27 +55,49 @@
             <p>Currently, I am:</p>
 
             <p><strong>Reading</strong>: <a class="primary-link" target="_blank"
-                    href="https://webhomes.maths.ed.ac.uk/~v1ranick/papers/poincare2009.pdf">Papers on Topology</a> by Henri Poincaré</p>
+                    href="https://ocw.mit.edu/courses/6-011-introduction-to-communication-control-and-signal-processing-spring-2010/pages/readings/">Signals, Systems and Inference</a> from
+                MIT OCW</p>
 
             <p><strong>Listening to</strong>: <a class="primary-link" target="_blank"
-                    href="https://open.spotify.com/album/3ceC0MdCoH0juD1Tr3ByKh?si=ctk_LL20RJOapUue0feHiQ">Niwamori Waltz</a> by
-                Niwamori Piano, <a class="primary-link" target="_blank"
-                    href="https://open.spotify.com/album/0I8vpSE1bSmysN2PhmHoQg?si=E8nQmO-bRRCERFQwyxnmtw">The Köln Concert</a> by Keith Jarrett, <a class="primary-link" target="_blank"
-                    href="https://open.spotify.com/album/4ntjTCmyhwHIsK12RScxRP?si=EqvEQl8GRomU_VonHaYbZg">Bossa Nova Soul Samba</a>
-                by Ike Quebec</p>
+                    href="https://open.spotify.com/album/0eeXb23yMW6EaIgm63xxPC?si=YtUtaBgVQCaS48qdzxRdew">Getting Killed</a> by
+                Geese, <a class="primary-link" target="_blank"
+                    href="https://open.spotify.com/album/0aQOIUU9PqEZKqE3dEJbjr?si=ECwLL4UUSMmrfY1SfNghjg">Morning Island</a> by Sadao Watanabe, <a class="primary-link" target="_blank"
+                    href="https://open.spotify.com/album/7bjQVaFHOacAZHizu0Kmz9?si=ppkI7puNRR20Gjd8HVLsVA">Live at "Dug"</a>
+                by Barry Harris</p>
 
             <p><strong>Watching</strong>: <a class="primary-link" target="_blank"
-                    href="https://a24films.com/films/marty-supreme">Marty Supreme</a> from
-                A24</p>
+                    href="https://youtu.be/8_yftoaY8uc?si=4lzXkuRgEjagGIMI">Team Canada</a> at the 2026 Winter Olympics</p>
 
             <br>
 
             <details>
-                <summary class="secondary-link">Last updated January 10th 2025</summary>
+                <summary class="secondary-link">Last updated February 14th 2026</summary>
                 <div class="secondary-text">
                     <br>
+                    <!-- January 10th 2026-->
+                     <p><strong>January 10th 2026</strong></p>
+                    <p>Reading: <a class="secondary-link" target="_blank"
+                            href="https://webhomes.maths.ed.ac.uk/~v1ranick/papers/poincare2009.pdf">Papers on
+                            Topology</a> by Henri Poincaré</p>
+
+                    <p>Listening to: <a class="secondary-link" target="_blank"
+                            href="https://open.spotify.com/album/3ceC0MdCoH0juD1Tr3ByKh?si=ctk_LL20RJOapUue0feHiQ">Niwamori
+                            Waltz</a> by
+                        Niwamori Piano, <a class="secondary-link" target="_blank"
+                            href="https://open.spotify.com/album/0I8vpSE1bSmysN2PhmHoQg?si=E8nQmO-bRRCERFQwyxnmtw">The
+                            Köln Concert</a> by Keith Jarrett, <a class="secondary-link" target="_blank"
+                            href="https://open.spotify.com/album/4ntjTCmyhwHIsK12RScxRP?si=EqvEQl8GRomU_VonHaYbZg">Bossa
+                            Nova Soul Samba</a>
+                        by Ike Quebec</p>
+
+                    <p>Watching: <a class="secondary-link" target="_blank"
+                            href="https://a24films.com/films/marty-supreme">Marty Supreme</a> from
+                        A24</p>
+                    
+                    <br>
+
                     <!-- December 7th 2025 -->
-                     <p><strong>December 7th 2025</strong></p>
+                    <p><strong>December 7th 2025</strong></p>
                     <p>Reading: <a class="secondary-link" target="_blank"
                             href="https://www.math.unm.edu/~crisp/courses/math401/tao.pdf">Real Analysis</a> by Terence
                         Tao</p>
@@ -208,9 +231,9 @@
                             <input type="radio" name="viewType" value="fieldnotes" onchange="switchView('fieldnotes')">
                             Fieldnotes
                         </label>
-                        <label class="db-view">
+                        <!-- <label class="db-view">
                             <input type="radio" name="viewType" value="album" onchange="switchView('album')"> Album
-                        </label>
+                        </label> -->
                     </th>
                 </tr>
             </table>
