fix: remove uneeded album files

--- a/changelog.html
+++ b/changelog.html
@@ -9,11 +9,12 @@
         content="Changelog for Gregory Cotton's website, documenting recent updates as well as a TODO list.">
 
     <meta property="og:title" content="Changelog | Gregory Cotton">
-    <meta property="og:description" content="Changelog for Gregory Cotton's website, documenting recent updates as well as a TODO list.">
+    <meta property="og:description"
+        content="Changelog for Gregory Cotton's website, documenting recent updates as well as a TODO list.">
     <meta property="og:type" content="website">
 
     <meta name="twitter:title" content="Changelog | Gregory Cotton">
-    
+
     <meta name="author" content="Gregory Cotton">
     <meta name="creator" content="gregorycotton.ca">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -64,85 +65,29 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td>nazare pics</td>
-                            <td>16/02/2026</td>
-                            <td><a target="_blank" class="table-link" href="https://github.com/gregorycotton/gregorycotton/commit/7b9877d750706b34be004680299e6cb80f1cbfbf">7b9877d</a></td>
-                        </tr>
-
-                        <tr>
-                            <td>Merge branch 'main' of github.com:gregorycotton/gregorycotton</td>
-                            <td>14/02/2026</td>
-                            <td><a target="_blank" class="table-link" href="https://github.com/gregorycotton/gregorycotton/commit/45b0ccf4ec73ad614efbfd6286e1dd0326421ee8">45b0ccf</a></td>
-                        </tr>
-
-                        <tr>
-                            <td>Merge branch 'main' of github.com:gregorycotton/gregorycotton</td>
-                            <td>01/02/2026</td>
-                            <td><a target="_blank" class="table-link" href="https://github.com/gregorycotton/gregorycotton/commit/f4c400eb79309d400397b0d5f6dc0a74b5be5acd">f4c400e</a></td>
-                        </tr>
-
-                        <tr>
-                            <td>fix: changelog footer</td>
-                            <td>08/12/2025</td>
-                            <td><a target="_blank" class="table-link" href="https://github.com/gregorycotton/gregorycotton/commit/668f7f202e4b88d8fdde3c7439e8ab9b261f855f">668f7f2</a></td>
-                        </tr>
-
-                        <tr>
-                            <td>fix: DUG img</td>
-                            <td>08/12/2025</td>
-                            <td><a target="_blank" class="table-link" href="https://github.com/gregorycotton/gregorycotton/commit/a84504161367c89a879c624555d6b742c805fb1c">a845041</a></td>
-                        </tr>
-
-                        <tr>
-                            <td>index update</td>
-                            <td>08/12/2025</td>
-                            <td><a target="_blank" class="table-link" href="https://github.com/gregorycotton/gregorycotton/commit/983f4dcc9c1ae0e61dcd66c7fb81e6aba2b56f82">983f4dc</a></td>
-                        </tr>
-
-                        <tr>
-                            <td>fix: footer</td>
-                            <td>07/12/2025</td>
-                            <td><a target="_blank" class="table-link" href="https://github.com/gregorycotton/gregorycotton/commit/489f4060367e53b428e68bbdcdd826f54faab22b">489f406</a></td>
-                        </tr>
-
-                        <tr>
-                            <td>hori scroll for metadata</td>
-                            <td>06/12/2025</td>
-                            <td><a target="_blank" class="table-link" href="https://github.com/gregorycotton/gregorycotton/commit/f006aa4ba818bd00cc4bbe999483afc53e53eb49">f006aa4</a></td>
-                        </tr>
-
-                        <tr>
-                            <td>Database and ontology updates</td>
-                            <td>06/07/2025</td>
-                            <td><a target="_blank" class="table-link" href="https://github.com/gregorycotton/gregorycotton/commit/c70cb34b3ce9b0f2a7bdaa4eb5205bae910ba053">c70cb34</a></td>
-                        </tr>
-
-                        <tr>
-                            <td>Table view and ontology pages</td>
-                            <td>03/07/2025</td>
-                            <td><a target="_blank" class="table-link" href="https://github.com/gregorycotton/gregorycotton/commit/931d56a6c1b74d72c0dcd20c5019442179f9ab0e">931d56a</a></td>
-                        </tr>
-
-                        <tr>
                             <td>Point changelog action to main branch</td>
                             <td>26/06/2025</td>
-                            <td><a target="_blank" class="table-link" href="https://github.com/gregorycotton/gregorycotton/commit/7812b88f056f788067854a86d9d8b5eeab430c75">7812b88</a></td>
+                            <td><a target="_blank" class="table-link"
+                                    href="https://github.com/gregorycotton/gregorycotton/commit/7812b88f056f788067854a86d9d8b5eeab430c75">7812b88</a>
+                            </td>
                         </tr>
+
                         <tr>
-                        <td>Updated index.html, added style.css</td>
-                        <td>13/06/2025</td>
-                        <td><a target="_blank"
-                                class="table-link" href="https://github.com/gregorycotton/gregorycotton/commit/b10f37a070385b9dc07467a0b52b1691bac6a37b">b10f37a</a>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>Initial commit</td>
-                        <td>26/05/2025</td>
-                        <td><a target="_blank"
-                                class="table-link" href="https://github.com/gregorycotton/gregorycotton/commit/9972cc062e1f01b0c908516d6cf550bb355e1782">9972cc0</a>
-                        </td>
-                    </tr>
-                        </tbody>
+                            <td>Updated index.html, added style.css</td>
+                            <td>13/06/2025</td>
+                            <td><a target="_blank" class="table-link"
+                                    href="https://github.com/gregorycotton/gregorycotton/commit/b10f37a070385b9dc07467a0b52b1691bac6a37b">b10f37a</a>
+                            </td>
+                        </tr>
+                        
+                        <tr>
+                            <td>Initial commit</td>
+                            <td>26/05/2025</td>
+                            <td><a target="_blank" class="table-link"
+                                    href="https://github.com/gregorycotton/gregorycotton/commit/9972cc062e1f01b0c908516d6cf550bb355e1782">9972cc0</a>
+                            </td>
+                        </tr>
+                    </tbody>
                 </table>
             </div>
         </div>
