--- a/ontology/amplify.html
+++ b/ontology/amplify.html
@@ -71,7 +71,7 @@
 
             <div class="proj-resource-container">
                 <div class="table-container">
-                    <table class="image-loader-table" id="amplifyTable1">
+                    <table class="image-loader-table" id="projectsTable">
                         <thead>
                             <tr>
                                 <th class="thumbnail-col">*</th>
@@ -80,7 +80,7 @@
                                 <th>View</th>
                             </tr>
                         </thead>
-                        <tbody id="projectsTableBodyStatic1">
+                        <tbody id="projectsTableBodyStatic">
                             <tr>
                                 <td class="thumbnail-col">
                                     <img src="thumbnails/amplify/personas-overview-thumbnail.jpg"
@@ -182,7 +182,7 @@
 
             <div class="proj-resource-container">
                 <div class="table-container">
-                    <table class="image-loader-table" id="myoapTable5">
+                    <table class="image-loader-table" id="projectsTable">
                         <thead>
                             <tr>
                                 <th>Title</th>
@@ -190,7 +190,7 @@
                                 <th>View</th>
                             </tr>
                         </thead>
-                        <tbody id="projectsTableBodyStatic3">
+                        <tbody id="projectsTableBodyStatic">
                             <tr>
                                 <td>App. A – Amplify onboarding flow</td>
                                 <td>Figma prototype</td>
