--- a/ontology/jazz-calendar.html
+++ b/ontology/jazz-calendar.html
@@ -6,19 +6,19 @@
 
     <meta name="title" content="Gregory Cotton">
     <meta name="description"
-        content="Project page for Greg's photo, used as the issue 05 cover of 'PACE Magazine'.">
+        content="Project page for Greg's 'Pemichangan Landscape Study', photos taken out of a moving car's window.">
 
-    <meta property="og:title" content="PACE Magazine Cover | Gregory Cotton">
-    <meta property="og:description" content="Project page for Greg's photo, used as the issue 05 cover of 'PACE Magazine'.">
+    <meta property="og:title" content="Pemichangan Landscape Study | Gregory Cotton">
+    <meta property="og:description" content="Project page for Greg's 'Pemichangan Landscape Study', photos taken out of a moving car's window.">
     <meta property="og:type" content="website">
 
-    <meta name="twitter:title" content="PACE Magazine Cover | Gregory Cotton">
+    <meta name="twitter:title" content="Pemichangan Landscape Study | Gregory Cotton">
     
     <meta name="author" content="Gregory Cotton">
     <meta name="creator" content="gregorycotton.ca">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>PACE Magazine Cover | Gregory Cotton</title>
+    <title>Jazz calendar | Gregory Cotton</title>
     <link rel="stylesheet" href="../style.css">
 
     <link rel="apple-touch-icon" sizes="180x180" href="../assets/favicon/apple-touch-icon.png">
@@ -37,7 +37,7 @@
         </div>
 
         <div class="right">
-            <h2>PACE Magazine Cover</h2>
+            <h2>Jazz calendar</h2>
 
             <br>
 
@@ -49,7 +49,7 @@
             </details>
 
             <div class="proj-txt-container">
-                <p>Cover image for issue 05 of an independent arts and culture magazine from Ottawa.</p>
+                <p>Native macOS application/widget built for the purpose of introducing myself to a new jazz album every single day of 2026.</p>
             </div>
 
             <br>
@@ -68,25 +68,24 @@
                         <tbody id="projectsTableBodyStatic">
                             <tr>
                                 <td class="thumbnail-col">
-                                    <img src="thumbnails/pace-magazine-cover/pace-magazine-cover-thumbnail.jpg"
-                                        alt="PACE Magazine Cover thumbnail" class="thumbnail-img">
+                                    <img src="thumbnails/jazz-calendar/jazz-calendar-app-thumbnail.jpg"
+                                        alt="Jazz calendar app thumbnail" class="thumbnail-img">
                                 </td>
-                                <td>PACE Magazine Cover</td>
-                                <td id="fileSize-pace-magazine-cover">Loading...</td>
+                                <td>Jazz calendar app</td>
+                                <td id="fileSize-jazz-calendar-app">Loading...</td>
                                 <td class="loadImageTrigger"
-                                    data-fullimageurl="images/pace-magazine-cover/pace-magazine-cover.jpg"
-                                    data-title="Full view"><a class="table-link">Load image</a></td>
+                                    data-fullimageurl="images/jazz-calendar/jazz-calendar-app.jpg" data-title="Jazz calendar app"><a class="table-link">Load image</a></td>
                             </tr>
+
                             <tr>
                                 <td class="thumbnail-col">
-                                    <img src="thumbnails/pace-magazine-cover/backseat-driver-thumbnail.jpg"
-                                        alt="Backseat Driver thumbnail" class="thumbnail-img">
+                                    <img src="thumbnails/jazz-calendar/jazz-calendar-widget-thumbnail.jpg"
+                                        alt="Jazz calendar widget thumbnail" class="thumbnail-img">
                                 </td>
-                                <td>Backseat Driver</td>
-                                <td id="fileSize-backseat-driver">Loading...</td>
+                                <td>Jazz calendar widget</td>
+                                <td id="fileSize-jazz-calendar-widget">Loading...</td>
                                 <td class="loadImageTrigger"
-                                    data-fullimageurl="images/pace-magazine-cover/backseat-driver.jpg"
-                                    data-title="Full view"><a class="table-link">Load image</a></td>
+                                    data-fullimageurl="images/jazz-calendar/jazz-calendar-widget.jpg" data-title="Jazz calendar widget"><a class="table-link">Load image</a></td>
                             </tr>
                         </tbody>
                     </table>
@@ -109,12 +108,12 @@
     <script>
         const imageConfigurations = [
             {
-                idForFileSizeCell: 'fileSize-pace-magazine-cover',
-                fullImageUrl: 'images/pace-magazine-cover/pace-magazine-cover.jpg'
+                idForFileSizeCell: 'fileSize-jazz-calendar-app',
+                fullImageUrl: 'images/jazz-calendar/jazz-calendar-app.jpg'
             },
             {
-                idForFileSizeCell: 'fileSize-backseat-driver',
-                fullImageUrl: 'images/pace-magazine-cover/backseat-driver.jpg'
+                idForFileSizeCell: 'fileSize-jazz-calendar-widget',
+                fullImageUrl: 'images/jazz-calendar/jazz-calendar-widget.jpg'
             }
         ];
     </script>
