--- a/ontology/myoap-dashboard.html
+++ b/ontology/myoap-dashboard.html
@@ -76,7 +76,7 @@
 
             <div class="proj-resource-container">
                 <div class="table-container">
-                    <table class="image-loader-table" id="myoapTable1">
+                    <table class="image-loader-table" id="projectsTable">
                         <thead>
                             <tr>
                                 <th class="thumbnail-col">*</th>
@@ -85,7 +85,7 @@
                                 <th>View</th>
                             </tr>
                         </thead>
-                        <tbody id="projectsTableBodyStatic1">
+                        <tbody id="projectsTableBodyStatic">
                             <tr>
                                 <td class="thumbnail-col">
                                     <img src="thumbnails/myoap-dashboard/service-blueprint-thumbnail.jpg"
@@ -133,7 +133,7 @@
 
             <div class="proj-resource-container">
                 <div class="table-container">
-                    <table class="image-loader-table" id="myoapTable2">
+                    <table class="image-loader-table" id="projectsTable">
                         <thead>
                             <tr>
                                 <th class="thumbnail-col">*</th>
@@ -142,7 +142,7 @@
                                 <th>View</th>
                             </tr>
                         </thead>
-                        <tbody id="projectsTableBodyStatic2">
+                        <tbody id="projectsTableBodyStatic">
                             <tr>
                                 <td class="thumbnail-col">
                                     <img src="thumbnails/myoap-dashboard/journey-map-thumbnail.jpg"
@@ -189,7 +189,7 @@
 
             <div class="proj-resource-container">
                 <div class="table-container">
-                    <table class="image-loader-table" id="myoapTable3">
+                    <table class="image-loader-table" id="projectsTable">
                         <thead>
                             <tr>
                                 <th class="thumbnail-col">*</th>
@@ -198,7 +198,7 @@
                                 <th>View</th>
                             </tr>
                         </thead>
-                        <tbody id="projectsTableBodyStatic3">
+                        <tbody id="projectsTableBodyStatic">
                             <tr>
                                 <td class="thumbnail-col">
                                     <img src="thumbnails/myoap-dashboard/user-flow-thumbnail.jpg"
@@ -249,7 +249,7 @@
 
             <div class="proj-resource-container">
                 <div class="table-container">
-                    <table class="image-loader-table" id="myoapTable4">
+                    <table class="image-loader-table" id="projectsTable">
                         <thead>
                             <tr>
                                 <th class="thumbnail-col">*</th>
@@ -258,7 +258,7 @@
                                 <th>View</th>
                             </tr>
                         </thead>
-                        <tbody id="projectsTableBodyStatic4">
+                        <tbody id="projectsTableBodyStatic">
                             <tr>
                                 <td class="thumbnail-col">
                                     <img src="thumbnails/myoap-dashboard/expense-categories-thumbnail.jpg"
@@ -320,7 +320,7 @@
 
                 <div class="proj-resource-container">
                     <div class="table-container">
-                        <table class="image-loader-table" id="myoapTable5">
+                        <table class="image-loader-table" id="projectsTable">
                             <thead>
                                 <tr>
                                     <th>Title</th>
@@ -328,7 +328,7 @@
                                     <th>View</th>
                                 </tr>
                             </thead>
-                            <tbody id="projectsTableBodyStatic3">
+                            <tbody id="projectsTableBodyStatic">
                                 <tr>
                                     <td>App. A – Connect a profile</td>
                                     <td>Figma prototype</td>
