--- a/ontology/pen-portraits.html
+++ b/ontology/pen-portraits.html
@@ -68,7 +68,7 @@
                                 <th>View</th>
                             </tr>
                         </thead>
-                        <tbody>
+                        <tbody id="projectsTableBodyStatic">
                             <tr>
                                 <td class="thumbnail-col">
                                     <img src="thumbnails/pen-portraits/full-display-thumbnail.jpg"
