--- a/ontology/public-secure-sso.html
+++ b/ontology/public-secure-sso.html
@@ -98,7 +98,7 @@
 
             <div class="proj-resource-container">
                 <div class="table-container">
-                    <table class="image-loader-table" id="ssoTable1">
+                    <table class="image-loader-table" id="projectsTable">
                         <thead>
                             <tr>
                                 <th class="thumbnail-col">*</th>
@@ -107,7 +107,7 @@
                                 <th>View</th>
                             </tr>
                         </thead>
-                        <tbody id="projectsTableBodyStatic1">
+                        <tbody id="projectsTableBodyStatic">
                             <tr>
                                 <td class="thumbnail-col">
                                     <img src="thumbnails/public-secure-sso/authentication-levels-thumbnails.jpg"
@@ -143,7 +143,7 @@
 
             <div class="proj-resource-container">
                 <div class="table-container">
-                    <table class="image-loader-table" id="ssoTable2">
+                    <table class="image-loader-table" id="projectsTable">
                         <thead>
                             <tr>
                                 <th class="thumbnail-col">*</th>
@@ -152,7 +152,7 @@
                                 <th>View</th>
                             </tr>
                         </thead>
-                        <tbody id="projectsTableBodyStatic2">
+                        <tbody id="projectsTableBodyStatic">
                             <tr>
                                 <td class="thumbnail-col">
                                     <img src="thumbnails/public-secure-sso/user-personas-thumbnail.jpg"
@@ -217,7 +217,7 @@
 
             <div class="proj-resource-container">
                 <div class="table-container">
-                    <table class="image-loader-table" id="ssoTable3">
+                    <table class="image-loader-table" id="projectsTable">
                         <thead>
                             <tr>
                                 <th class="thumbnail-col">*</th>
@@ -226,7 +226,7 @@
                                 <th>View</th>
                             </tr>
                         </thead>
-                        <tbody id="projectsTableBodyStatic3">
+                        <tbody id="projectsTableBodyStatic">
                             <tr>
                                 <td class="thumbnail-col">
                                     <img src="thumbnails/public-secure-sso/sign-up-flow-thumbnail.jpg"
@@ -288,7 +288,7 @@
 
             <div class="proj-resource-container">
                 <div class="table-container">
-                    <table class="image-loader-table" id="ssoTable4">
+                    <table class="image-loader-table" id="projectsTable">
                         <thead>
                             <tr>
                                 <th class="thumbnail-col">*</th>
@@ -297,7 +297,7 @@
                                 <th>View</th>
                             </tr>
                         </thead>
-                        <tbody id="projectsTableBodyStatic4">
+                        <tbody id="projectsTableBodyStatic">
                             <tr>
                                 <td class="thumbnail-col">
                                     <img src="thumbnails/public-secure-sso/one-key-alert-thumbnail.jpg"
@@ -358,7 +358,7 @@
             </div>
             <div class="proj-resource-container">
                 <div class="table-container">
-                    <table class="image-loader-table" id="ssoTable5">
+                    <table class="image-loader-table" id="projectsTable">
                         <thead>
                             <tr>
                                 <th>Title</th>
@@ -366,7 +366,7 @@
                                 <th>View</th>
                             </tr>
                         </thead>
-                        <tbody id="projectsTableBodyStatic5">
+                        <tbody id="projectsTableBodyStatic">
                             <tr>
                                 <td>App. A – High-level onboarding</td>
                                 <td>Figma prototype</td>
