--- a/ontology/to-stay-at-home.html
+++ b/ontology/to-stay-at-home.html
@@ -65,7 +65,7 @@
                                 <th>View</th>
                             </tr>
                         </thead>
-                        <tbody>
+                        <tbody id="projectsTableBodyStatic">
                             <tr>
                                 <td class="thumbnail-col">
                                     <img src="thumbnails/to-stay-at-home/listen-to-me-cover-thumbnail.jpg"
