--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <script src="scripts/config.js"></script>
     <script src="scripts/app.js"></script>
     <script src="scripts/table-manager.js"></script>
-    <script src="scripts/image-popup.js"></script>
+    <!-- <script src="scripts/image-popup.js"></script> -->
 
     <noscript>
         <meta http-equiv="refresh" content="0;url=nojs.html">
@@ -71,7 +71,7 @@
             <br>
 
             <details>
-                <summary class="secondary-link">Last updated February 14th 2026</summary>
+                <summary class="secondary-link">Last updated February 19th 2026</summary>
                 <div class="secondary-text">
                     <br>
                     <!-- January 10th 2026-->
