--- a/ontology/the-food-library.html
+++ b/ontology/the-food-library.html
@@ -61,7 +61,7 @@
 
             <div class="proj-resource-container">
                 <div class="table-container">
-                    <table class="image-loader-table" id="flTable1">
+                    <table class="image-loader-table" id="projectsTable">
                         <thead>
                             <tr>
                                 <th class="thumbnail-col">*</th>
@@ -70,7 +70,7 @@
                                 <th>View</th>
                             </tr>
                         </thead>
-                        <tbody id="projectsTableBodyStatic1">
+                        <tbody id="projectsTableBodyStatic">
                             <tr>
                                 <td class="thumbnail-col">
                                     <img src="thumbnails/the-food-library/floor-plan-thumbnail.jpg"
@@ -187,7 +187,7 @@
 
             <div class="proj-resource-container">
                 <div class="table-container">
-                    <table class="image-loader-table" id="flTable4">
+                    <table class="image-loader-table" id="projectsTable">
                         <thead>
                             <tr>
                                 <th class="thumbnail-col">*</th>
@@ -196,7 +196,7 @@
                                 <th>View</th>
                             </tr>
                         </thead>
-                        <tbody id="projectsTableBodyStatic4">
+                        <tbody id="projectsTableBodyStatic">
                             <tr>
                                 <td class="thumbnail-col">
                                     <img src="thumbnails/the-food-library/food-scanner-thumbnail.jpg"
@@ -273,7 +273,7 @@
 
             <div class="proj-resource-container">
                 <div class="table-container">
-                    <table class="image-loader-table" id="flTable5">
+                    <table class="image-loader-table" id="projectsTable">
                         <thead>
                             <tr>
                                 <th>Title</th>
@@ -281,7 +281,7 @@
                                 <th>View</th>
                             </tr>
                         </thead>
-                        <tbody id="projectsTableBodyStatic5">
+                        <tbody id="projectsTableBodyStatic">
                             <tr>
                                 <td>App. A – Owen on the food scanner</td>
                                 <td>YouTube video</td>
