--- a/ontology/une-bouteille-de-peinture.html
+++ b/ontology/une-bouteille-de-peinture.html
@@ -66,7 +66,7 @@
                                 <th>View</th>
                             </tr>
                         </thead>
-                        <tbody>
+                        <tbody id="projectsTableBodyStatic">
                             <tr>
                                 <td class="thumbnail-col">
                                     <img src="thumbnails/une-bouteille-de-peinture/une-bouteille-de-peinture-thumbnail.jpg"
