--- a/changelog.html
+++ b/changelog.html
@@ -46,7 +46,6 @@
             <p>Desired changes or additions to this site I'll get around to in my free time, someday.</p>
             <br>
             <ul style="list-style-position: inside">
-                <li>Stateful URLs for queries on tables</li>
                 <li>FTS5 for database search</li>
                 <li>More efficient means of generating new pages</li>
             </ul>
@@ -65,17 +64,9 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td>fix: remove uneeded album files</td>
+                            <td>Remove album DB view</td>
                             <td>19/02/2026</td>
                             <td><a target="_blank" class="table-link" href="https://github.com/gregorycotton/gregorycotton/commit/26f3c55dce06e1a051519731af2321f5ce8c65c5">26f3c55</a></td>
-                        </tr>
-
-                        <tr>
-                            <td>Point changelog action to main branch</td>
-                            <td>26/06/2025</td>
-                            <td><a target="_blank" class="table-link"
-                                    href="https://github.com/gregorycotton/gregorycotton/commit/7812b88f056f788067854a86d9d8b5eeab430c75">7812b88</a>
-                            </td>
                         </tr>
 
                         <tr>
