--- a/changelog.html
+++ b/changelog.html
@@ -69,7 +69,7 @@
                         </tr>
 
                         <tr>
-                            <td>feat: Stateful URLs for queries on tables</td>
+                            <td>Stateful URLs for queries on tables</td>
                             <td>20/02/2026</td>
                             <td><a target="_blank" class="table-link" href="https://github.com/gregorycotton/gregorycotton/commit/f131e58c0a29cdd4eec32ea1495021e7732cd159">f131e58</a></td>
                         </tr>
