--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
             <p>Currently, I am:</p>
 
             <p><strong>Reading</strong>: <a class="primary-link" target="_blank"
-                    href="https://ocw.mit.edu/courses/6-011-introduction-to-communication-control-and-signal-processing-spring-2010/pages/readings/">Signals, Systems and Inference</a> from
-                MIT OCW</p>
+                    href="https://www.barnesandnoble.com/w/the-wind-up-bird-chronicle-haruki-murakami/1100619480?ean=9780679775430">The Wind-Up Bird Chronicle</a> by
+                Haruki Murakami</p>
 
             <p><strong>Listening to</strong>: <a class="primary-link" target="_blank"
                     href="https://open.spotify.com/album/0eeXb23yMW6EaIgm63xxPC?si=YtUtaBgVQCaS48qdzxRdew">Getting Killed</a> by
