Changelog style fix

--- a/changelog.html
+++ b/changelog.html
@@ -46,14 +46,14 @@
             <p>Desired changes or additions to this site I'll get around to in my free time, someday.</p>
             <br>
             <ul style="list-style-position: inside">
-                <li>More efficient means of generating new pages</li>
+                <li>N/A (for now)</li>
             </ul>
 
             <br>
             <br>
 
             <div id="changelog">
-                <table>
+                <table class="image-loader-table" id="projectsTable">
                     <thead>
                         <tr>
                             <th>Change description</th>
@@ -61,13 +61,7 @@
                             <th>Hash</th>
                         </tr>
                     </thead>
-                    <tbody>
-                        <tr>
-                            <td>update index</td>
-                            <td>20/02/2026</td>
-                            <td><a target="_blank" class="table-link" href="https://github.com/gregorycotton/gregorycotton/commit/71acaae0fe54833e51ea8d83e15b96c48862f2f3">71acaae</a></td>
-                        </tr>
-
+                    <tbody id="projectsTableBodyStatic">
                         <tr>
                             <td>FTS5 for database search</td>
                             <td>20/02/2026</td>
