Kyoto page content fix

--- a/ontology/kyoto.html
+++ b/ontology/kyoto.html
@@ -49,7 +49,7 @@
             </details>
 
             <div class="proj-txt-container">
-                <p>Select images from Kanazawa, Japan (September 2025).</p>
+                <p>Select images from Kyoto, Japan (September 2025).</p>
             </div>
 
             <br>
@@ -394,7 +394,7 @@
                                 <td id="fileSize-uji-i">Loading...</td>
                                 <td class="loadImageTrigger"
                                     data-fullimageurl="images/kyoto/uji-i.jpg"
-                                    data-title="Uji I"><a class="table-link">Load image</a></td>
+                                    data-title="Uji II"><a class="table-link">Load image</a></td>
                             </tr>
                             <tr>
                                 <td class="thumbnail-col">
