--- a/ontology/kyoto.html
+++ b/ontology/kyoto.html
@@ -394,14 +394,14 @@
                                 <td id="fileSize-uji-i">Loading...</td>
                                 <td class="loadImageTrigger"
                                     data-fullimageurl="images/kyoto/uji-i.jpg"
-                                    data-title="Uji II"><a class="table-link">Load image</a></td>
+                                    data-title="Uji I"><a class="table-link">Load image</a></td>
                             </tr>
                             <tr>
                                 <td class="thumbnail-col">
                                     <img src="thumbnails/kyoto/uji-ii-thumbnail.jpg"
                                         alt="Uji II thumbnail" class="thumbnail-img">
                                 </td>
-                                <td>Uji I</td>
+                                <td>Uji II</td>
                                 <td id="fileSize-uji-ii">Loading...</td>
                                 <td class="loadImageTrigger"
                                     data-fullimageurl="images/kyoto/uji-ii.jpg"
