--- a/ontology/jazz-calendar.html
+++ b/ontology/jazz-calendar.html
@@ -9,7 +9,7 @@
         content="Project page for Greg's 'Pemichangan Landscape Study', photos taken out of a moving car's window.">
 
     <meta property="og:title" content="Pemichangan Landscape Study | Gregory Cotton">
-    <meta property="og:description" content="Project page for Greg's 'Pemichangan Landscape Study', photos taken out of a moving car's window.">
+    <meta property="og:description" content="Project page for Greg's 'Jazz calendar', which reccomends you new jazz music daily.">
     <meta property="og:type" content="website">
 
     <meta name="twitter:title" content="Pemichangan Landscape Study | Gregory Cotton">
