--- a/ontology/nazare-wave-study.html
+++ b/ontology/nazare-wave-study.html
@@ -9,7 +9,7 @@
         content="Project page for Greg's 'Pemichangan Landscape Study', photos taken out of a moving car's window.">
 
     <meta property="og:title" content="Pemichangan Landscape Study | Gregory Cotton">
-    <meta property="og:description" content="Project page for Greg's 'Pemichangan Landscape Study', photos taken out of a moving car's window.">
+    <meta property="og:description" content="Project page for Greg's 'Nazare wave study', photos taken during a stormy day in Nazare, Portugal.">
     <meta property="og:type" content="website">
 
     <meta name="twitter:title" content="Pemichangan Landscape Study | Gregory Cotton">
